--- a/.env
+++ b/.env
@@ -5,11 +5,11 @@ DB_HOST='localhost'
 DB_DATABASE='WaterWorks'
 DB_USER='aluno'
 DB_PASSWORD='Sptech#2024'
-DB_PORT='3307'
+DB_PORT='3306'
 
 # Configurações do servidor de aplicação
 APP_PORT=8080
-APP_HOST=localhost
+APP_HOST=10.18.6.85
 
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
 
